[package]
name = "eyros"
version = "4.6.0"
description = "multi-dimensional interval database"
license-file = "LICENSE"
readme = "readme.md"
repository = "https://github.com/peermaps/eyros"
homepage = "https://github.com/peermaps/eyros"
documentation = "https://docs.rs/eyros"
keywords = [ "database", "multi-dimensional", "interval", "time-series", "geospatial" ]
categories = [ "database-implementations" ]
edition = "2018"

[dependencies]
lru = "0.4.3"
async-std = { version = "1.10.0", features = ["attributes","unstable"] }
random-access-storage = "4.0.0"
random-access-disk = { version = "2.0.0", optional = true }
desert = "2.0.0"
async-trait = "0.1.30"
futures = "0.3.5"
pin-utils = "0.1.0"
futures-core = "0.3.5"
pin-project-lite = "0.2.6"
wasm-bindgen = { version = "0.2.74", optional = true }
wasm-bindgen-futures = { version = "0.4.24", optional = true }
futures-io = { version = "0.3.5", optional = true }
js-sys = { version = "0.3.51", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
rand = "0.6.1"
random = "0.12.2"
tempfile = "3.0.7"

[lib]
crate-type = ["rlib","cdylib"]

[features]
default = ["random-access-disk","2d","3d","4d"]
wasm = ["wasm-bindgen","wasm-bindgen-futures","futures-io","js-sys","console_error_panic_hook"]
no-debug = []
2d = []
3d = []
4d = []
5d = []
6d = []
7d = []
8d = []

[profile.release]
debug = true
